--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
         'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '296748679358304');
       fbq('track', 'PageView');
-      fbq('track', 'AddToCart');
+      // fbq('track', 'AddToCart');
       // fbq('track', 'click');
     </script>
     <noscript><img height="1" width="1" style="display:none"
