--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,9 @@
         'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '1431451050963075');
       fbq('track', 'PageView');
+      fbq('track', 'InitiateCheckout');
+      fbq('track', 'AddToCart');
+      fbq('track', 'Purchase');
       // fbq('track', 'AddToCart');
       // fbq('track', 'click');
     </script>
