--- a/public/index.html
+++ b/public/index.html
@@ -71,11 +71,10 @@
         'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '1431451050963075');
       fbq('track', 'PageView');
-      fbq('track', 'InitiateCheckout');
-      fbq('track', 'AddToCart');
-      fbq('track', 'Purchase');
+      // fbq('track', 'InitiateCheckout');
       // fbq('track', 'AddToCart');
-      // fbq('track', 'click');
+      // fbq('track', 'Purchase');
+      
     </script>
     <noscript><img height="1" width="1" style="display:none"
         src="https://www.facebook.com/tr?id=1431451050963075&ev=PageView&noscript=1" /></noscript>
